add transactions route
